/*
 * map.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2024 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.apple.foundationdb.record.nestedmaptest;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "NestedMap";

import "record_metadata_options.proto";

message OuterRecord {
  optional int64 rec_id = 1 [(field).primary_key = true];
  optional int64 other_id = 2;
  optional MapRecord map = 3;
}

message MapRecord {
  message Entry {
    optional string key = 1;
    optional string value = 2;
  }
  repeated Entry entry = 1;
}

message RecordTypeUnion {
  optional OuterRecord _OuterRecord = 1;
}